# practice_elf

./: .gitignore  Cargo.toml  README.md  hello
.devcontainer/: devcontainer.json  docker-compose.yml
prepare_elf64/: Dockerfile  docker-compose.yml
prepare_elf64/sample/: elfsamp.c  generate_sample_elf64_files.sh  main.c
prepare_elf64/tutorial/chapter_10/: crt.c  main.c  sample.c  sample2.c  service.c  syscall.s
src/: domain.rs  lib.rs  main.rs
src/domain/: elf.rs  elf_const.rs  elf_header.rs  elf_program_header.rs  elf_rela.rs  elf_section_header.rs  elf_symbol.rs
src/domain/elf/: elf_64.rs
src/domain/elf_header/: elf_64_header.rs  elf_ident.rs  elf_magic.rs
src/domain/elf_header/elf_ident/: e_class.rs  e_endian.rs  e_machine.rs
src/domain/elf_program_header/: elf_64_program_header.rs  elf_segment_flags.rs  elf_segment_type.rs
src/domain/elf_rela/: elf_64_rela.rs
src/domain/elf_section_header/: elf_64_section_header.rs
src/domain/elf_symbol/: elf_64_symbol.rs  symbol_binding.rs  symbol_type.rs  symbol_visibility.rs
