[package]
name = "practice_elf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "practice_elf"


[dependencies]
nom = "7.1.1"
thiserror = "1.0"
clap = { version = "4.0.0-rc.2", features = ["derive"]}
